src/app/globals.css
@import "tailwindcss";
@plugin "@tailwindcss/forms";

/* 1. Declare layer order */
/* @layer theme, base, components, utilities; */

/* 2. Import Tailwind styles */
/* @import "tailwindcss/theme.css" layer(theme); */
/* @import "tailwindcss/preflight.css" layer(base); */

/* 3. Import utilities WITHOUT a layer */
/* @import "tailwindcss/utilities.css"; */

:root {
  --background: #ffffff;
  --foreground: #171717;
  --black: #3e3e3e;
  --black01: #3d3d3d;
  --black02: #141414;
  --black03: #1a1a1a;
  --black-opaque: rgba(62, 62, 62, 0.3);
  --black-30: rgba(62, 62, 62, 0.3);
  --black-50: rgba(62, 62, 62, 0.5);
  --white: #ffffff;
  --white01: #fafafa;
  --yellow: #fcdd18;
  --yellow01: #d6bb0f;
  --yellow02: #f8e56b;
  --yellow03: #fcdd18;
  --yellow04: #fff8ce;
  --yellow01-opaque: rgba(214, 187, 15, 0.1);
  --soft-yellow: #fff8ce;
  --orange: #e88e15;
  --orange-opaque: rgba(232, 142, 21, 0.1);
  --red: #e26262;
  --red-opaque: rgba(226, 98, 98, 0.11);
  --red01: #d36966;
  --blue: #45c6dd;
  --blue-opaque: rgba(69, 198, 221, 0.1);
  --blue01: #a5d9f4;
  --green: #31c491;
  --green02: #1e7e1b;
  --green03: #1d591b;
  --green02-80: rgba(30, 126, 27, 0.8);
  --green-opaque: rgba(49, 196, 145, 0.1);
  --grey01: #eeeeee;
  --grey02: #808080;
  --grey02-opaque: rgba(128, 128, 128, 0.1);
  --grey03: #2f3431;
  --grey03-opaque: rgba(47, 52, 49, 0.1);
  --grey04: #f4f6fa;
  --grey05: #676767;
  --grey06: #707070;
  --grey07: #e4e4e4;
  --grey08: #f4f6fa;
  --grey09: #f6f6f6;
  --grey10: #bfbfbf;
  --grey11: #8b8b8b;
  --grey12: #191919;
  --grey13: #262626;
  --grey14: #999999;
  --purple: #703BF7;
  --purple01: #9b51e0;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@theme {
  --color-black: var(--black);
  --color-black01: var(--black01);
  --color-black02: var(--black02);
  --color-black03: var(--black03);
  --color-black-opaque: var(--black-opaque);
  --color-black-50: var(--black-50);
  --color-black-30: var(--black-30);
  --color-white: var(--white);
  --color-white01: var(--white01);
  --color-yellow: var(--yellow);
  --color-yellow01: var(--yellow01);
  --color-yellow03: var(--yellow03);
  --color-yellow01-opaque: var(--yellow01-opaque);
  --color-soft-yellow: var(--soft-yellow);
  --color-orange: var(--orange);
  --color-orange-opaque: var(--orange-opaque);
  --color-red: var(--red);
  --color-red01: var(--red01);
  --color-red-opaque: var(--red-opaque);
  --color-blue: var(--blue);
  --color-blue-opaque: var(--blue-opaque);
  --color-green: var(--green);
  --color-green02: var(--green02);
  --color-green03: var(--green03);
  --color-green-opaque: var(--green-opaque);
  --color-green02-80: var(--green02-80);
  --color-grey01: var(--grey01);
  --color-grey02: var(--grey02);
  --color-grey02-opaque: var(--grey02-opaque);
  --color-grey03: var(--grey03);
  --color-grey03-opaque: var(--grey03-opaque);
  --color-grey04: var(--grey04);
  --color-grey05: var(--grey05);
  --color-grey06: var(--grey06);
  --color-grey07: var(--grey07);
  --color-grey08: var(--grey08);
  --color-grey09: var(--grey09);
  --color-grey10: var(--grey10);
  --color-grey11: var(--grey11);
  --color-grey12: var(--grey12);
  --color-grey13: var(--grey13);
  --color-grey14: var(--grey14);
  --color-purple: var(--purple);
  --color-purple01: var(--purple01);

  --font-lexend: var(--font-lexend);
  --font-urbanist: var(--font-urbanist);

  /* --breakpoint-sm: 480px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 976px;
  --breakpoint-xl: 1440px; */
  --breakpoint-3xl: 1920px;
  --breakpoint-ml: 1180px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@layer base {
  html {
    font-size: 10px;
    font-weight: normal;
    scroll-behavior: smooth;
  }

  *,
  *:before,
  *:after {
    scroll-behavior: smooth;
    box-sizing: border-box;
    font-family: var(--font-urbanist);
  }
  * {
    margin: 0;
    padding: 0;
  }

  a {
    text-decoration: none;
    cursor: pointer;
  }

  body {
    background: var(--black02);
    font-family: var(--font-urbanist);
    color: var(--foreground);
    overflow: auto;
  }
}

/* body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
} */

/* Font size and font family */
.lex-r-8 {
  font-family: var(--font-lexend);
  font-size: 0.8rem;
  font-weight: 400;
}

.lex-r-9 {
  font-family: var(--font-lexend);
  font-size: 0.9rem;
  font-weight: 400;
}

.lex-r-10 {
  font-family: var(--font-lexend);
  font-size: 1rem;
  font-weight: 400;
}

.lex-r-11 {
  font-family: var(--font-lexend);
  font-size: 1.1rem;
  font-weight: 400;
}

.lex-r-12 {
  font-family: var(--font-lexend);
  font-size: 1.2rem;
  font-weight: 400;
}

.lex-r-13 {
  font-family: var(--font-lexend);
  font-size: 1.3rem;
  font-weight: 400;
}

.lex-r-14 {
  font-family: var(--font-lexend);
  font-size: 1.4rem;
  font-weight: 400;
}

.lex-r-15 {
  font-family: var(--font-lexend);
  font-size: 1.5rem;
  font-weight: 400;
}

.lex-r-16 {
  font-family: var(--font-lexend);
  font-size: 1.6rem;
  font-weight: 400;
}

.lex-r-18 {
  font-family: var(--font-lexend);
  font-size: 1.8rem;
  font-weight: 400;
}

.lex-r-20 {
  font-family: var(--font-lexend);
  font-size: 2rem;
  font-weight: 400;
}

.lex-r-22 {
  font-family: var(--font-lexend);
  font-size: 2.2rem;
  font-weight: 400;
}

.lex-m-8 {
  font-family: var(--font-lexend);
  font-size: 0.8rem;
  font-weight: 500;
}

.lex-m-10 {
  font-family: var(--font-lexend);
  font-size: 1rem;
  font-weight: 500;
}

.lex-m-12 {
  font-family: var(--font-lexend);
  font-size: 1.2rem;
  font-weight: 500;
}

.lex-m-13 {
  font-family: var(--font-lexend);
  font-size: 1.3rem;
  font-weight: 500;
}

.lex-m-14 {
  font-family: var(--font-lexend);
  font-size: 1.4rem;
  font-weight: 500;
}
/* ... */

